testoldcopy/force-app/main/default/objects/QBO_QuickBook_Auth_Info__c/QBO_QuickBook_Auth_Info__c.object-meta.xml
<CustomObject>
    <label>QuickBook Auth Info</label>
    <nameField>
        <displayFormat>QBO-{0000}</displayFormat>
        <label>QuickBook Auth Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBook Auth Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>