testoldcopy/force-app/main/default/objects/QBO_QuickBook_Auth_Info__c/fields/QBO_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>QBO_Access_Token__c</fullName>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>