testoldcopy/force-app/main/default/objects/QBO_QuickBook_Auth_Info__c/fields/QBO_Refresh_Token_Expires_In__c.field-meta.xml
<CustomField>
    <fullName>QBO_Refresh_Token_Expires_In__c</fullName>
    <label>Refresh Token Expires In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>